CORE (8.49) Add .gitignore for artefacts created by some tests.
Change-Id: I7edb18dad169d6e631ae86768218de8c4b0907a2

--- a/uk.ac.gda.core.test/.gitignore
+++ b/uk.ac.gda.core.test/.gitignore
@@ -23,6 +23,10 @@ cachedir/
 ### JUnit testing ###
 /test-reports
 /test-scratch
+/derby.log
+/dummyMotor
+/motor
+/null
 
 ### Security files ###
 *ssh.key
