Add the simulated AD to the example config (disabled by default)
Change-Id: I568adee749645c7b0bc7cbfa09cc4ef6d8a9b4eb

--- a/example-config/properties/dummy/dummy_instance_java.properties
+++ b/example-config/properties/dummy/dummy_instance_java.properties
@@ -15,6 +15,9 @@ gda.logPanel.logging.port=6002
 # Added to stop the Jython history being stored in the shared scripts folder
 gda.jythonTerminal.commandHistory.path=${gda.var}/
 
+#This means GDA will set the scan number during prepare for collection. Required for AD HDF writing
+gda.scan.sets.scannumber=true
+
 #Add all dummy mode beamline specific keys before this line
 include=../_common/common_instance_java.properties
 #Do not set any keys after this line as the value may not get set as expected.
