Suppress PyDev funding and settings dialogs for the example config client
See also GDA-6158. Removed redundent properties. Not sure if its possible
to suppress the Python not configured dialog

Change-Id: Ib0ebd1af74855664ac063ac8559686707ead5946

--- a/uk.ac.gda.example/plugin_customization.ini
+++ b/uk.ac.gda.example/plugin_customization.ini
@@ -1,16 +1,16 @@
-#plugin_customization.ini sets default values for 
-#plug-in specific preferences
-#keys are qualified by plug-in id
-#this file does not need to be translated
+# plugin_customization.ini sets default values for plug-in specific preferences
+# keys are qualified by plug-in id
 
 # Editor default preferences
 org.eclipse.ui.editors/showWhitespaceCharacters=true
 org.eclipse.ui.editors/spacesForTabs=true
-org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = false
 
-# Presepect default preferences
-org.eclipse.ui/defaultPerspectiveId=gda.rcp.scriptingperspective
-uk.ac.gda.client/gda.PyDev.addDefaultJavaJars=true
+# PyDev Extension - GDA Syntax checker
+# If true analyse using PyDev and PyDev Extension. Adds Jython Nature. Creates Jython interpreter
+uk.ac.gda.pydev.extension/uk.ac.gda.pydev.check.script.syntax=true
 
-
-uk.ac.gda.client/gda.loggingscriptcontrollers.to_observe=MyLoggingScriptController,MyOtherLoggingScriptController
+#PyDev Settings
+# Suppress the PyDev funding dialog
+org.python.pydev/PYDEV_FUNDING_SHOWN_2014=true
+# Suppress the PyDev settings dialog
+org.python.pydev/CHECK_PREFERRED_PYDEV_SETTINGS=false
