Add example beamline name
Change-Id: Iaba209f9095749f9ceb33072010a33b6d3fa3e74

--- a/example-config/properties/_common/common_instance_java.properties
+++ b/example-config/properties/_common/common_instance_java.properties
@@ -1,8 +1,9 @@
 # See "GDA configuration" in the GDA Developer Guide for information about properties
 
+gda.beamline.name = Example
+
 # The location the startup file will be written to once the servers have started.
 gda.objectserver.initialisationCompleteFolder=${gda.var}
-
 #
 # Object factory properties
 # 
