GDA-6220 Remove remaining items from test/ directory
Change-Id: I9cabac044b8b8b616f910e7ca5047ff35574bac5

--- a/uk.ac.gda.core/build.properties
+++ b/uk.ac.gda.core/build.properties
@@ -1,7 +1,5 @@
-source.. = src/,\
-           test/
-output.. = classes/main,\
-           classes/test
+source.. = src/
+output.. = classes/main
 bin.includes = META-INF/,\
                lib/,\
                bin/,\
