--- a/uk.ac.gda.devices.peem/build.properties
+++ b/uk.ac.gda.devices.peem/build.properties
@@ -1,11 +1,9 @@
-source.. = src/,\
-           test/
+source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                icons/,\
-               jars/gda_peem-corba.jar,\
-               jars/peem-1.0.jar
+               jars/
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings=true
 jre.compilation.profile = JavaSE-1.7
