Split server packages out of uk.ac.gda.example plugin
Currently the example config server.xml loads classes from uk.ac.gda.example which depends on uk.ac.gda.client (and other client/ui packages). This means that for this config the server indirectly depends upon the client which we don't want. To break this dependency, the server side packages have been moved into a new uk.ac.gda.example.server plugin so that server launchers/features need only depend on this instead.

Change-Id: I2e29fc9f4baa5ac901ec87440226d02bbbbb5d66

--- a/example-config/.classpath
+++ b/example-config/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/uk.ac.gda.core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/uk.ac.gda.example"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/uk.ac.gda.example.server"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
