--- a/example-config/.project
+++ b/example-config/.project
@@ -6,6 +6,7 @@
 		<project>uk.ac.gda.core</project>
 		<project>uk.ac.gda.epics</project>
 		<project>uk.ac.gda.example</project>
+		<project>uk.ac.gda.example.server</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
