--- a/uk.ac.gda.example/build.properties
+++ b/uk.ac.gda.example/build.properties
@@ -2,8 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               jars/gda-corba-example.jar
+               plugin.xml
                plugin_customization.ini,\
                introContent.xml,\
                help/,\
