GDA-5995 (8.44) Prevent users having to answer various PyDev related questions.
Change-Id: I8cbd2c3a22b4931486508382ff83866e56272b7e

--- a/uk.ac.gda.client/plugin_customization.ini
+++ b/uk.ac.gda.client/plugin_customization.ini
@@ -1,13 +1,12 @@
-#plugin_customization.ini sets default values for 
-#plug-in specific preferences
-#keys are qualified by plug-in id
-#this file does not need to be translated
+# plugin_customization.ini sets default values for plug-in specific preferences
+
+# Keys are qualified by plug-in id
+# This file does not need to be translated
 
 # Editor default preferences
 org.eclipse.ui.editors/showWhitespaceCharacters=true
 org.eclipse.ui.editors/spacesForTabs=true
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = false
-
 
 # PyDev - switch off by default
 org.python.pydev/ANALYZE_ONLY_ACTIVE_EDITOR=true
@@ -19,4 +18,13 @@ org.python.pydev/USE_CODE_COMPLETION_ON_DEBUG_CONSOLES=false
 org.python.pydev/AUTOCOMPLETE_ON_DOT=false 
 org.python.pydev/INTERPRETER_CONFIGURATION_0=DONT_ASK
 org.python.pydev/USE_AUTOCOMPLETE=false
+
+# Adding this option prevents the "Default Eclipse preferences for PyDev" dialog when opening the client
+org.python.pydev/CHECK_PREFERRED_PYDEV_SETTINGS=false
+
+# Adding this option prevents the "Python not configured" dialog when first opening a .py file in the pydev editor
+org.python.pydev/NOTIFY_NO_INTERPRETER_0=false
+
+# Adding this option prevents the "Help keeping PyDev alive" dialog when first opening a .py file in the pydev editor
+org.python.pydev/PYDEV_FUNDING_SHOWN_2014=true
 
