GDA-6226 Also suppress the Python and Jython not configured dialogs
Fixed the build.properties previously the binary build did not contain
the plugin_customization.ini. Removed incorrect entries.

Change-Id: I409137ac134727188460f4397f7708e8cd87553a

--- a/uk.ac.gda.example/plugin_customization.ini
+++ b/uk.ac.gda.example/plugin_customization.ini
@@ -14,3 +14,7 @@ uk.ac.gda.pydev.extension/uk.ac.gda.pydev.check.script.syntax=true
 org.python.pydev/PYDEV_FUNDING_SHOWN_2014=true
 # Suppress the PyDev settings dialog
 org.python.pydev/CHECK_PREFERRED_PYDEV_SETTINGS=false
+# Suppress the PyDev Python not configured dialog
+org.python.pydev/NOTIFY_NO_INTERPRETER_0=false
+# Suppress the PyDev Jython not configured dialog
+org.python.pydev/NOTIFY_NO_INTERPRETER_1=false
