--- a/uk.ac.gda.example/build.properties
+++ b/uk.ac.gda.example/build.properties
@@ -2,11 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
-               plugin_customization.ini,\
-               introContent.xml,\
-               help/,\
-               icons/
+               plugin.xml,\
+               plugin_customization.ini
 javacProjectSettings=true
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.7
