Create Arpes Server plugin and move scannables into it from Arpes plugin The uk.ac.gda.arpes plugin currently contains a mix of server and client/ui classes. To reduce gda server dependency a new uk.ac.gda.arpes.server plugin has been created to hold the no client classes, initially this is the scannables. I've left them in the sam package so the Spring/Jython references don't change.
Also move uk.ac.gda.arpes.test to uk.ac.gda.arpes.server.test


Change-Id: I799fcd5521bcebfc5cc2f699964a0cf46741cf97

--- a/uk.ac.gda.arpes.server.test/.project
+++ b/uk.ac.gda.arpes.server.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>uk.ac.gda.arpes.test</name>
+	<name>uk.ac.gda.arpes.server.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
