--- a/uk.ac.gda.devices.pixium/build.properties
+++ b/uk.ac.gda.devices.pixium/build.properties
@@ -4,7 +4,6 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                contexts.xml
-javacSource = 1.6
-javacTarget = 1.6
-javacProjectSettings=true
 javacDefaultEncoding.. = UTF-8
+jre.compilation.profile = JavaSE-1.7
+javacProjectSettings = true
