--- a/uk.ac.gda.epics.client.pixium/build.properties
+++ b/uk.ac.gda.epics.client.pixium/build.properties
@@ -5,6 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                images/
 javacDefaultEncoding.. = UTF-8
-javacSource = 1.6
-javacTarget = 1.6
+jre.compilation.profile = JavaSE-1.7
 javacProjectSettings = true
