Move towards more standard project settings in all projects Initial preparation for move to Eclipse 4
Change-Id: I116c2eddc787159a6ab62e89e7d71032ed0d1311

--- a/uk.ac.gda.core.test/.gitignore
+++ b/uk.ac.gda.core.test/.gitignore
@@ -7,6 +7,7 @@
 ### Java ###
 *.class
 hs_err_pid*
+derby.log
 
 ### Python / Jython ###
 __pycache__/
@@ -23,10 +24,6 @@ cachedir/
 ### JUnit testing ###
 /test-reports
 /test-scratch
-/derby.log
-/dummyMotor
-/motor
-/null
 
 ### Security files ###
 *ssh.key
@@ -35,6 +32,10 @@ passwords
 
 ### Various OS, etc. files ###
 *.lnk
-desktop.ini
+.DS_Store
+[Dd]esktop.ini
 .nfs[:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:]*
 .svn/
+Thumbs.db
+$RECYCLE.BIN/
+.Trash-*
