--- a/uk.ac.gda.core/.gitignore
+++ b/uk.ac.gda.core/.gitignore
@@ -32,6 +32,10 @@ passwords
 
 ### Various OS, etc. files ###
 *.lnk
-desktop.ini
+.DS_Store
+[Dd]esktop.ini
 .nfs[:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:][:xdigit:]*
 .svn/
+Thumbs.db
+$RECYCLE.BIN/
+.Trash-*
