--- a/uk.ac.gda.eventbus.api/build.properties
+++ b/uk.ac.gda.eventbus.api/build.properties
@@ -2,3 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .
+javacDefaultEncoding.. = UTF-8
+jre.compilation.profile = JavaSE-1.7
+javacProjectSettings = true
