Stop the reload script button failing if the module is not yet imported
Change-Id: I8b17b2075c523589b13ba49fc8f8ed9c11a2212c

--- a/uk.ac.gda.client/plugin.xml
+++ b/uk.ac.gda.client/plugin.xml
@@ -1124,10 +1124,10 @@
               class="uk.ac.gda.client.scripting.ReloadScriptActionDelegate"
               icon="icons/script_lightning.png"
               id="uk.ac.gda.pydev.reloadScript"
-              label="Reload"
+              label="Import/Reload"
               style="push"
               toolbarPath="Normal/additions"
-              tooltip="Reloads the script in the GDA Server.">
+              tooltip="Import or Reload the script in the GDA Server.">
         </action>
         <action
               class="uk.ac.gda.client.scripting.RunScriptActionDelegate"
