--- a/uk.ac.gda.core/build.properties
+++ b/uk.ac.gda.core/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                lib/,\
                bin/,\
                .,\
-               icons/
+               icons/,\
+               OSGI-INF/
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.7
 javacProjectSettings = true
