Move tests into the test fragment and remove unused dependencies
Change-Id: I98a484d37a5082a69533b5fb1d09acdd44b3a157

--- a/uk.ac.gda.common.rcp/build.properties
+++ b/uk.ac.gda.common.rcp/build.properties
@@ -1,6 +1,5 @@
 source.. = src/,\
-           icons/,\
-           test/
+           icons/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
