Update to new HDF namespace
Change-Id: I523c092cff8d3e6ec6d1a6684b0a593b63fb3d94

--- a/uk.ac.gda.example.site/buckminster.properties
+++ b/uk.ac.gda.example.site/buckminster.properties
@@ -50,7 +50,7 @@ jre.include.fail.if.not.found=true
 ###
 # required for Dawn builds to copy native code to the ${product.directory.name}/lib
 lib.copy.requested=false
-#lib.copy.jars=com.amd.aparapi_*,ncsa.hdf_*.jar,org.dawnsci.plotting.jreality_*,uk.ac.diamond.CBFlib_*.jar
+#lib.copy.jars=com.amd.aparapi_*,hdf.hdf5lib_*.jar,org.dawnsci.plotting.jreality_*,uk.ac.diamond.CBFlib_*.jar
 
 ###
 ### Standard parameters
