DATAACQTEAM-263 Correct project settings to avoid auto-formatting
This updates all projects in the repository to the same settings

Change-Id: Ic39cb3c6e52b06898242d728a9cccbb3434af3bd

--- a/uk.ac.gda.example.server/build.properties
+++ b/uk.ac.gda.example.server/build.properties
@@ -3,3 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                jars/gda-corba-example.jar
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings = true
