Move live MJPEG and live control views from uk.ac.diamond.daq.mapping.client
They were removed from gda-incubation.git in commit
a241ab79bee562913f8da7c2b0d3b5b15616b452

Change-Id: I7508c5b55d8a47f04bc310abc66409cd701c50ac

--- a/uk.ac.gda.client/build.properties
+++ b/uk.ac.gda.client/build.properties
@@ -13,7 +13,8 @@ bin.includes = META-INF/,\
                schema/,\
                testToc.xml,\
                toc.xml,\
-               help_contexts.xml
+               help_contexts.xml,\
+               OSGI-INF/
 output.. = bin/
 javacProjectSettings = true
 source.. = src/,\
