--- a/p45-config/properties/_common/common_instance_java.properties
+++ b/p45-config/properties/_common/common_instance_java.properties
@@ -4,6 +4,7 @@
 gda.beamline.name = p45
 gda.instrument = ${gda.beamline.name}
 
+
 # File formatting items
 gda.data.scan.datawriter.dataFormat = NexusDataWriter
 gda.nexus.backend = HDF5
@@ -12,17 +13,29 @@ gda.nexus.createSRS = false
 gda.data.filePrefix = ${gda.beamline.name}-
 gda.data.fileExtension = nxs
 
+#This means GDA will set the scan number during prepare for collection. Required for AD HDF writing
+gda.scan.sets.scannumber = true
 
-# Next are miscellaneous settings for various file locations and options 
-gda.motordir              = ${gda.var}/motorPositions
-gda.limitsdir             = ${gda.var}/limitsAndOffset
-gda.softlimits.save       = false
+# Switch on HDF5 SWMR writing mode for normal (GDA) scans - this has no effect on org.eclipse.scanning scans
+gda.nexus.writeSwmr=true
+
+# Additional GDA paths
+gda.data.scan.datawriter.datadir = ${gda.data}/$year$
+
+
+# Next are miscellaneous settings for various file locations and options
+gda.motordir = ${gda.var}/motorPositions
+gda.limitsdir = ${gda.var}/limitsAndOffset
+gda.softlimits.save = false
+
+# Added to stop the Jython history being stored in the shared scripts folder
+gda.jythonTerminal.commandHistory.path = ${gda.var}/
 
 
 # Role-Based Access Control properties
-gda.accesscontrol.useAccessControl          = false
-gda.accesscontrol.useBatonControl           = true
-gda.accesscontrol.firstClientTakesBaton     = true
+gda.accesscontrol.useAccessControl = false
+gda.accesscontrol.useBatonControl = true
+gda.accesscontrol.firstClientTakesBaton = true
 
 
 # Command Server (Jython Server) properties
@@ -38,9 +51,6 @@ gda.util.persistence.database.password = gda
 # These two to use embedded driver
 gda.util.persistence.database.driver   = org.apache.derby.jdbc.EmbeddedDriver
 gda.util.persistence.database.protocol = jdbc:derby:
-
-# Switch on SWMR
-gda.nexus.writeSwmr=true
 
 #Add all beamline specific keys before this line
 include=${sys:gda.facility.dir}/properties/${sys:gda.mode}/${sys:gda.mode}_facility_java.properties
