--- a/p45-config/properties/dummy/dummy_instance_java.properties
+++ b/p45-config/properties/dummy/dummy_instance_java.properties
@@ -1,28 +1,9 @@
 #If any properties (keys) end up being duplicated, the 1st value that is set is what you end up with.
 #See Jira ticket GDA-6106 for details
 
-# Key GDA folders
-# When in dummy mode all of these directories are in the same directory as workspace and workspace_git and outside of git
-gda.rcp.workspace	= ${gda.config}/../../../gda-workspace
-gda.data			= ${gda.config}/../../../gda_data_non_live
-gda.var				= ${gda.config}/../../../gda_var_non_live
-gda.logs.dir		= ${gda.config}/../../../gda_logs_non_live
-
-# Additional GDA paths
-gda.data.scan.datawriter.datadir = ${gda.data}/$year$
-gda.rmi.prefix = rmi://localhost/gda/
-
-# Logging
-gda.logserver.host = localhost
-gda.logserver.out.port = 6750
-gda.server.logging.port = 6000
-gda.logPanel.logging.port = 6002
-
-# Added to stop the Jython history being stored in the shared scripts folder
-gda.jythonTerminal.commandHistory.path = ${gda.var}/
-
-#This means GDA will set the scan number during prepare for collection. Required for AD HDF writing
-gda.scan.sets.scannumber = true
+# This config is slightly unusual in having no specific properties here. All necessary properties for p45 are set in
+# common_instance_java.properties, and live- and dummy- specific settings are handled in
+# dls-config/live-facility-java.properties and dls-config/dummy-facility-java.properties
 
 #Add all dummy mode beamline specific keys before this line
 include = ../_common/common_instance_java.properties
