DAQ-99 Include visit in path so files are written in the correct place
Change-Id: Ie09b1be4532cdbbdb15433a8bc2b0fbec27affde

--- a/p45-config/properties/_common/common_instance_java.properties
+++ b/p45-config/properties/_common/common_instance_java.properties
@@ -20,7 +20,7 @@ gda.scan.sets.scannumber = true
 gda.nexus.writeSwmr=true
 
 # Additional GDA paths
-gda.data.scan.datawriter.datadir = ${gda.data}/$year$
+gda.data.scan.datawriter.datadir = ${gda.data}/$year$/$visit$
 
 
 # Next are miscellaneous settings for various file locations and options
