Set group on tmp dir to avoid permissions problems
Change-Id: I371a8912816333153ec51f5761f8a8d6263680ad

--- a/uk.ac.diamond.daq.beamline.p45.site/buckminster.beamline.properties
+++ b/uk.ac.diamond.daq.beamline.p45.site/buckminster.beamline.properties
@@ -10,7 +10,7 @@ buckminster.output.root.delete.previous=true
 buckminster.temp.root.delete.previous=true
 
 # optionally, change the group (like chgrp) and set the groupid bit (like chmod g+s) on newly created directories
-output.directory.group.set=false
+output.directory.group.set=true
 output.directory.group=dls_dasc
 
 # specify the name of the directory (for a specific platform) containing the product
