p45: change directory name created by Jenkins to something more standard
Change-Id: I2559f5d787e06b0e4fddea746b7c720f29a4393c

--- a/uk.ac.diamond.daq.beamline.p45.site/buckminster.jenkins.properties
+++ b/uk.ac.diamond.daq.beamline.p45.site/buckminster.jenkins.properties
@@ -25,7 +25,7 @@ output.directory.group=dls_dasc
 # ${action.datetime}                                                            20130228-1202 (nb: not the same date and time as product.version.qualifier)
 # ${action.date}                                                                20130228
 product.parent.directory.location=${buckminster.root.prefix}/products
-product.directory.name=GDA-example-${product.version.full}-${product.osname}${product.bits}
+product.directory.name=GDA-DLS-p45-${product.version.full}-${product.osname}${product.bits}
 product.directory.fail.if.already.exists=true
 symlink.to.product.location=${product.parent.directory.location}/client
 symlink.to.product.value=products/product.directory.name
