Added icons for views in the mapping perspective.
Change-Id: I928edd43a1c74469bead8d14ae0faa8d1054e826

Change-Id: I928edd43a1c74469bead8d14ae0faa8d1054e826
Signed-off-by: Matthew Gerring <matthew.gerring@gmail.com>

--- a/uk.ac.gda.client/plugin.xml
+++ b/uk.ac.gda.client/plugin.xml
@@ -164,6 +164,7 @@
       <view
             allowMultiple="true"
             class="uk.ac.gda.client.liveplot.mjpeg.LiveMjpegPlot"
+            icon="icons/media-player-phone-horizontal.png"
             id="uk.ac.gda.client.liveplot.mjpeg.LiveMJPEGView"
             name="Live MJPEG Plot"
             restorable="true">
@@ -171,6 +172,7 @@
       <view
             allowMultiple="true"
             class="uk.ac.gda.client.livecontrol.LiveControlsView"
+            icon="icons/ui-slider-050.png"
             id="uk.ac.gda.client.livecontrol.LiveControlsView"
             name="Live Controls"
             restorable="true">
