--- a/uk.ac.diamond.daq.mapping.ui/plugin.xml
+++ b/uk.ac.diamond.daq.mapping.ui/plugin.xml
@@ -5,6 +5,7 @@
          point="org.eclipse.ui.perspectives">
       <perspective
             class="uk.ac.diamond.daq.mapping.ui.experiment.MappingPerspective"
+            icon="icons/map.png"
             id="uk.ac.diamond.daq.mapping.ui.experiment.MappingPerspective"
             name="Mapping">
       </perspective>
@@ -13,6 +14,7 @@
          point="org.eclipse.ui.views">
       <e4view
             class="uk.ac.diamond.daq.mapping.ui.experiment.MappingExperimentView"
+            icon="icons/map--pencil.png"
             id="uk.ac.diamond.daq.mapping.ui.experiment.mappingExperimentView"
             name="Mapping Experiment Setup"
             restorable="true">
