Switch to p45-control instead of localhost
Change-Id: I65fb3a06233502d12d966bd1443f63974473507f

--- a/p45-config/properties/live/jacorb/etc/jacorb.properties
+++ b/p45-config/properties/live/jacorb/etc/jacorb.properties
@@ -1,2 +1,3 @@
-ORBInitRef.NameService=corbaloc::localhost:6700/NameService
+ORBInitRef.NameService=corbaloc::p45-control.diamond.ac.uk:6700/NameService
+
 include=../../../_common/jacorb/etc/jacorb.properties
