--- a/p45-config/properties/live/live_instance_java.properties
+++ b/p45-config/properties/live/live_instance_java.properties
@@ -1,8 +1,9 @@
 #If any properties (keys) end up being duplicated, the 1st value that is set is what you end up with.
 #See Jira ticket GDA-6106 for details
 
-# The GDA server host - temporarily localhost until a p45-control machine is available
-gda.server.host = localhost
+# This config is slightly unusual in having no specific properties here. All necessary properties for p45 are set in
+# common_instance_java.properties, and live- and dummy- specific settings are handled in
+# dls-config/live-facility-java.properties and dls-config/dummy-facility-java.properties
 
 #Add all live mode beamline specific keys before this line
 include = ../_common/common_instance_java.properties
