I05-21 Fix double clicking .arpes file doesn't open them
The setFocus method was not implemented causing switching the editor to
fail.

Also added the file extension to the extension point defining the editor

Change-Id: I9616661431706679e1a1f923cadabcd3d0a26ed0

--- a/uk.ac.gda.arpes/plugin.xml
+++ b/uk.ac.gda.arpes/plugin.xml
@@ -16,6 +16,7 @@
     <editor
           class="uk.ac.gda.arpes.ui.ARPESScanBeanEditor"
           default="true"
+          extensions="arpes"
           icon="icons/anaico.png"
           id="uk.ac.gda.arpes.beans.ARPESScanBeanEditor"
           name="ARPES Scan Editor">
