DAQ 104 Rework Jython Classloading as per Jython meeting (12th May)
Jython classloader now receives the active set of Bundles in the context
and builds a lookup table of package to bundle on initialisation. This
is then used by loadClass falling back to the parent loader if this
fails. 

The lookup table also contains markers against package/bundle
combinations that indicate whether this combination id considered part 
of the supported Jython API. This information is also supplied at
initialisation having been derived from the new jythonVisibility
extension point in uk.ac.gda.api.

This extension point also allows standard python script folders to be
specified that should be available to all beamlines (e.g. core scripts)
removing the need to specify them in all beamline configs. These paths
are also initialised before the Jython classloader can be instantiated.

(see http://confluence.diamond.ac.uk/display/CT/2016-05-12+Jython+Meeting+notes)

Change-Id: I16b6afebf8c9aa8dfe51094554326ef91dffd509

--- a/uk.ac.gda.core/build.properties
+++ b/uk.ac.gda.core/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                bin/,\
                .,\
                icons/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               plugin.xml
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.8
 javacProjectSettings = true
