--- a/uk.ac.gda.arpes.server/build.properties
+++ b/uk.ac.gda.arpes.server/build.properties
@@ -1,6 +1,7 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.xml
 jre.compilation.profile = JavaSE-1.8
 javacProjectSettings = true
