--- a/documentation.gda/common/MakefileCommon
+++ b/documentation.gda/common/MakefileCommon
@@ -5,8 +5,13 @@
 ifeq ($(CONTEXT),diamond)
 	@echo "Environment variable CONTEXT=diamond, so setting build environment suitable for Diamond Light Source"
 	# get the location of a Python that has Sphinx installed
-	SPHINXBUILD?=$(shell module load python/2.7.2;which sphinx-build)
+	SPHINXBUILD?=$(shell module load python/anaconda;which sphinx-build)
+
+	# need to add style files that are missing from texlive-2007.60 for sphinx 1.4.1
+	# for imgmath png generation in html
+	export TEXINPUTS=../common:
 endif
+
 
 # optionally use Sphinx's "-W" options, which converts warnings into errors
 ifeq ($(HALTONWARNING),y)
