DAQ-231 Remove conflict between Jython socket port values
Make sure the property value is set correctly and then refer to it in
Spring. Including this in the example and p45 configs should mean people
actually see the correction and might become aware of the problem!

Change-Id: Ia72f576b70296b6f6aecbb6343184420411718fd

--- a/p45-config/properties/_common/common_instance_java.properties
+++ b/p45-config/properties/_common/common_instance_java.properties
@@ -42,6 +42,7 @@ gda.accesscontrol.firstClientTakesBaton = true
 gda.jython.translator.class = GeneralTranslator
 gda.jython.GDAJythonInterpreter.useWriters = true
 gda.jython.terminalOutputDir = ${gda.logs.dir}
+gda.jython.socket = 9999
 
 
 ## Database and persistence settings
