DAQ-223 Tidy up example and p45 logging configs
- Reformat whitespace for consistency (all tabs, Unix line endings, no
trailing whitespace)
- Improve comments for explaining what the files and various parts do
- Change logging levels so the server and client send all messages to
the log server, which then filters out a couple of noisy packages and
otherwise writes all events to the log file. Only INFO and above are
sent to the log panel to avoid overloading it
- Remove a few logger definitions which are irrelevant for these configs
- Improve appender names for clarity of purpose
- Remove mode-specific configs which are probably not really needed
- Make p45 and example configs as similar as possible in preparation for
making a shared core logging config

Change-Id: Ic4df86b412bd1e03b7f23e131447b1dbad798aa0

--- a/example-config/properties/_common/common_instance_java.properties
+++ b/example-config/properties/_common/common_instance_java.properties
@@ -45,14 +45,12 @@ gda.plot.ScanPlotSettings.YFieldIndicesVisible = -1
 # Logging properties
 #
 gda.logs.dir = ${gda.config}/users/logs
-# configuration for messages originating from the client
-gda.client.logging.xml = ${gda.config}/properties/${gda.mode}/client_and_server_logging.xml
 # configuration for messages originating from the object server
-gda.server.logging.xml = ${gda.config}/properties/${gda.mode}/client_and_server_logging.xml
+gda.server.logging.xml = ${gda.config}/properties/_common/client_and_server_logging.xml
+# configuration for messages originating from the client
+gda.client.logging.xml = ${gda.server.logging.xml}
 # configuration for messages received by the log server via gda.server.logging.port
-gda.logserver.xml = ${gda.config}/properties/${gda.mode}/logServer.xml
-# configuration for messages received by the client via gda.client.logging.port - normally only sends messages to the client's log panel
-gda.clientLogService.logging.xml = ${gda.config}/xml/logging/clientLogService.xml
+gda.logserver.xml = ${gda.config}/properties/_common/logServer.xml
 
 
 #
