--- a/p45-config/properties/_common/common_instance_java.properties
+++ b/p45-config/properties/_common/common_instance_java.properties
@@ -5,6 +5,15 @@ gda.beamline.name = p45
 gda.instrument = ${gda.beamline.name}
 
 
+# Logging properties - overriding the shared properties since p45 has no live or dummy mode-specific configuration
+# configuration for messages originating from the object server
+gda.server.logging.xml = ${gda.config}/properties/_common/client_and_server_logging.xml
+# configuration for messages originating from the client
+gda.client.logging.xml = ${gda.server.logging.xml}
+# configuration for messages received by the log server via gda.server.logging.port
+gda.logserver.xml = ${gda.config}/properties/_common/logServer.xml
+
+
 # File formatting items
 gda.data.scan.datawriter.dataFormat = NexusDataWriter
 gda.nexus.backend = HDF5
