DAQ-233 Add a standard core logging config
The config consists of two top-level configuration files (log_server.xml
and client_and_server_logging.xml) which are intended to be complete
logging configurations which all beamlines can simply use as-is. These
work by including some core definitions (core_log_server.xml and
core_client_and_server_logging.xml) and then adding a root logger. This
allows beamlines to define their own top-level configurations if
necessary (for example to change the level of the root logger or include
extra appenders) but to still include the standard core appenders for
consistency.

This commit also:
- updates p45-config to use the new standard logging, by removing the
  p45-specific logging files and the properties which referred to them

- updates example-config to use the new standard logging. This requires
  the core-config properties to be included, which sets a few property
  values which were previously undefined (but this does not appear to
  cause any detrimental changes in behaviour)

Change-Id: I243a9520ed95218f0f461dca99fa7cc4ba329cfd

--- a/core-config/properties/core_java.properties
+++ b/core-config/properties/core_java.properties
@@ -1,8 +1,22 @@
-# GDA App properties that appear in core repository projects
+# Default property values for GDA installations. This file should be included by instance, group or facility properties
+# files but values may be overridden if necessary.
 
+# Logging
+gda.logserver.host = ${gda.server.host}
+gda.logserver.out.port = 6750
+gda.server.logging.port = 6788
+
+gda.client.logging.xml = ${gda.core.dir}/properties/client_and_server_logging.xml
+gda.server.logging.xml = ${gda.client.logging.xml}
+gda.logserver.xml = ${gda.core.dir}/properties/log_server.xml
+
+
+# Lookup tables
 gda.function.lookupTable.dir=${gda.config}/lookupTables
 gda.function.columnDataFile.lookupDir = ${gda.function.lookupTable.dir}
 
+
+# RBAC and Baton control
 gda.accesscontrol.useAccessControl = true
 gda.accesscontrol.useBatonControl = true
 gda.accesscontrol.defaultAuthorisationLevel = 1
