--- a/example-config/properties/_common/common_instance_java.properties
+++ b/example-config/properties/_common/common_instance_java.properties
@@ -41,17 +41,6 @@ gda.plot.ScanPlotSettings.fromUserList         = true
 gda.plot.ScanPlotSettings.XFieldIndex          = -1
 gda.plot.ScanPlotSettings.YFieldIndicesVisible = -1
 
-#
-# Logging properties
-#
-gda.logs.dir = ${gda.config}/users/logs
-# configuration for messages originating from the object server
-gda.server.logging.xml = ${gda.config}/properties/_common/client_and_server_logging.xml
-# configuration for messages originating from the client
-gda.client.logging.xml = ${gda.server.logging.xml}
-# configuration for messages received by the log server via gda.server.logging.port
-gda.logserver.xml = ${gda.config}/properties/_common/logServer.xml
-
 
 #
 # Command Server (Jython Server) properties
@@ -102,4 +91,7 @@ gda.util.persistence.database.protocol = jdbc:derby:
 gda.rmi.prefix=rmi://localhost/gda/
 gda.logserver.out.port = 6750
 
-#include=${sys:gda.facility.dir}/properties/${sys:gda.mode}/dummy_facility_java.properties
+
+#Add all instance-specific keys before this line
+include = ${sys:gda.core.dir}/properties/core_java.properties
+#Do not set any keys after this line as the value may not get set as expected.
