DAQ-233 Tidy up example-config properties and use more standard values
Change-Id: I340b99b0daeddf9d98634f4ab2fe1303ba38e2d0

--- a/example-config/properties/_common/common_instance_java.properties
+++ b/example-config/properties/_common/common_instance_java.properties
@@ -42,6 +42,11 @@ gda.plot.ScanPlotSettings.XFieldIndex          = -1
 gda.plot.ScanPlotSettings.YFieldIndicesVisible = -1
 
 
+# Other scan properties
+
+#This means GDA will set the scan number during prepare for collection. Required for AD HDF writing
+gda.scan.sets.scannumber = true
+
 #
 # Command Server (Jython Server) properties
 #
@@ -55,6 +60,11 @@ gda.data.scan.datawriter.dataFormat   = NexusDataWriter
 gda.nexus.createSRS                   = false
 gda.jython.socket                     = 9999
 gda.function.columnDataFile.lookupDir = ${gda.config}/lookupTables
+
+# Added to stop the Jython history being stored in the shared scripts folder
+gda.jythonTerminal.commandHistory.path = ${gda.var}/
+
+
 # The default (fallback) visit ID to use if implementing an ICAT system. This system can be used to make the data directory vary for each user 
 # and to restrict users on other experiments view the current experiment for beamlines with external access.
 #gda.defVisit = 0-0
@@ -81,15 +91,8 @@ gda.util.persistence.database.password = gda
 gda.util.persistence.database.driver   = org.apache.derby.jdbc.EmbeddedDriver
 gda.util.persistence.database.protocol = jdbc:derby:
 
-#
-# Database and persistence settings
-#
-# Following two to connect to external database (embedded driver by default)
-#gda.util.persistence.database.driver = org.apache.derby.jdbc.ClientDriver 
-#gda.util.persistence.database.protocol = jdbc:derby://localhost:1527/
 
-gda.rmi.prefix=rmi://localhost/gda/
-gda.logserver.out.port = 6750
+gda.rmi.prefix = rmi://${gda.server.host}/gda/
 
 
 #Add all instance-specific keys before this line
