--- a/example-config/properties/dummy/dummy_instance_java.properties
+++ b/example-config/properties/dummy/dummy_instance_java.properties
@@ -1,22 +1,11 @@
 #If any properties (keys) end up being duplicated, the 1st value that is set is what you end up with.
 #See Jira ticket GDA-6106 for details
 
-gda.data					= ${gda.config}/../../../gda_data_non_live
-gda.var						= ${gda.config}/../../../gda_var_non_live
-gda.logs.dir				= ${gda.config}/../../../gda_logs_non_live
-gda.logserver.host			= localhost
-gda.rmi.prefix				= rmi://localhost/gda/
+gda.data     = ${gda.config}/../../../gda_data_non_live
+gda.var      = ${gda.config}/../../../gda_var_non_live
+gda.logs.dir = ${gda.config}/../../../gda_logs_non_live
 
-# Logging
-gda.logserver.host=localhost
-gda.server.logging.port=6000
-gda.logPanel.logging.port=6002
-
-# Added to stop the Jython history being stored in the shared scripts folder
-gda.jythonTerminal.commandHistory.path=${gda.var}/
-
-#This means GDA will set the scan number during prepare for collection. Required for AD HDF writing
-gda.scan.sets.scannumber=true
+gda.server.host = localhost
 
 #Add all dummy mode beamline specific keys before this line
 include=../_common/common_instance_java.properties
