--- a/uk.ac.gda.client.microfocus/build.properties
+++ b/uk.ac.gda.client.microfocus/build.properties
@@ -1,11 +1,12 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                schema/,\
                scripts/,\
-               icons/
-javacDefaultEncoding.. = UTF-8
+               icons/,\
+               OSGI-INF/
 javacProjectSettings = true
+source.. = src/
+javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.7
