[DAQ-16] Run Commands on new GDA9 queue
Change-Id: If17aca7f7d8250116099102efad635d67b18fb02

--- a/uk.ac.gda.client.experimentdefinition/build.properties
+++ b/uk.ac.gda.client.experimentdefinition/build.properties
@@ -1,11 +1,12 @@
-source.. = src/,\
-           icons/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               schema/
-javacProjectSettings=true
+               schema/,\
+               OSGI-INF/
+javacProjectSettings = true
+source.. = src/,\
+           icons/
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.7
