[DAQ-16] send bean for new queue as ExperimentCommandQueue.
This provides the information required to identify the IExperimentObject that was run. Added abstract superclass for handlers, edit handler and abstract open results handler. Concrete open results handlers are in change 4433 as this requires knowledge of experiment and plotting perspectives.

Change-Id: Ic7dad12023d7b34c4b1c74e92267f0c8ce183bb3

--- a/uk.ac.gda.client.experimentdefinition/plugin.xml
+++ b/uk.ac.gda.client.experimentdefinition/plugin.xml
@@ -906,4 +906,9 @@
             name="Import existing XML files into project">
       </wizard>
    </extension>
+
+   <extension point="org.eclipse.scanning.api.modifyHandler">
+      <modifyHandler class="uk.ac.gda.client.experimentdefinition.ui.handlers.EditExperimentHandler"/>
+   </extension>
+   
 </plugin>
