[DAQ-16] add open results handlers for ExperimentCommandBeans for energy and microfocus scans
Change-Id: Ib8bd0e751956483a83c16507977042313655d204

--- a/uk.ac.gda.client.exafs/plugin.xml
+++ b/uk.ac.gda.client.exafs/plugin.xml
@@ -704,4 +704,8 @@
       </bean>
    </extension>
 
+   <extension point="org.eclipse.scanning.api.resultsHandler">
+      <resultsHandler class="uk.ac.gda.exafs.ui.actions.OpenResultsHandler"/>
+   </extension>
+
 </plugin>
