I09-64 Remove Slices and External IO Views
They have just been commented out for now as we might want to enable
them again in the future.

Change-Id: I1d841230f83039c0928a829f7af3ec253774ae73

--- a/org.opengda.detector.electronanalyser.client/plugin.xml
+++ b/org.opengda.detector.electronanalyser.client/plugin.xml
@@ -24,13 +24,13 @@
             name="Spectrum"
             restorable="true">
       </view>
-      <view
+      <!-- <view
             category="org.opengda.detector.electronanalyser.client.ses"
             class="gda.rcp.views.ViewFactory:externalioviewfactory"
             id="org.opengda.detector.electronanalyser.client.views.externalioview"
             name="External IO"
             restorable="true">
-      </view>
+      </view> -->
       <view
             category="org.opengda.detector.electronanalyser.client.ses"
             class="gda.rcp.views.ViewFactory:imageviewfactory"
@@ -38,13 +38,13 @@
             name="Image"
             restorable="true">
       </view>
-      <view
+      <!-- <view
             category="org.opengda.detector.electronanalyser.client.ses"
             class="gda.rcp.views.ViewFactory:slicesviewfactory"
             id="org.opengda.detector.electronanalyser.client.views.slicesview"
             name="Slices"
             restorable="true">
-      </view>
+      </view> -->
       <view
             category="org.opengda.detector.electronanalyser.client.ses"
             class="gda.rcp.views.ViewFactory:progressviewfactory"
